<resources>
    <string name="default_web_client_id">302765188541-f0gvbfljg0bafpos7i4666cu9bf5plba.apps.googleusercontent.com</string>
    <string name="app_name">DEFTY_MOVIE_APP</string>
    <string name="my_diamond">My Diamond</string>
    <string name="my_vip_gift_cards">My VIP Gift Cards</string>
    <string name="subscribe_to_vip">Subscribe to VIP</string>
    <string name="my_list">My List</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="language_select">Language</string>
    <string name="search">Search</string>
    <string name="selected">Selected</string>
    <string name="login_sign_up">Login / Sign Up</string>
    <string name="library">Explore</string>
    <string name="home">Home</string>
    <string name="short_tab">Short</string>
    <string name="download">Download</string>
    <string name="profile">Profile</string>
    <string-array name="gender_array">
        <item>--Select Gender--</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="limited_free_shows_title">Limited Free Shows</string>
    <string name="top_10_shows_title">TOP 10 Shows</string>
    <string name="premium_content_title">Premium Content</string>
    <string name="banner_image_description">Banner Image</string>
    <string name="feedback_message">Send Us Your Feedback</string>
    <string name="context_feedback">Your feedback…</string>
    <string name="feedback_sent_successfully">Feedback sent successfully</string>
    <string name="sending">Sending…</string>
    <string name="error_empty_feedback">Error feedback…</string>
    <string name="send_email_via">Send email via…</string>
    <string name="error_no_email_app">No email app found on the device.</string>
    <string name="pref_category_appearance_title">Appearance</string>
    <string name="pref_category_account_title">Account</string>
    <string name="pref_category_about_title">About</string>
    <string name="no_categories_found">No categories found</string>
    <string name="no_movies_in_category">No movies in this category</string>
    <string name="no_categories_available">No categories available at the moment</string>
    <string name="movie_id_not_found">Movie information not found</string>
    <string name="pref_display_mode_title">Display Mode</string>
    <string name="all_regions_label">All regions</string>
    <string name="all_paid_categories_label">All packages</string>
    <string name="all_time_periods_label">All time periods</string>
    <string name="premium_label">Premium</string>
    <string name="normal_label">Normal</string>
    <string name="pref_display_mode_dialog_title">Choose Display Mode</string>
    <string name="logout_successful">Logout successful!</string>
    <string name="register_successful">Register successful!</string>
    <string name="login_successful">Login successful!</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="login_failed">Username or password is wrong</string>
    <string name="register_failed">Register failed</string>
    <string-array name="pref_display_mode_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
    <string-array name="pref_display_mode_values">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>

    <string name="pref_logout_title">Log Out</string>
    <string name="pref_logout_summary">Log out of your current account</string>

    <string name="pref_app_version_title">App Version</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>

    <string name="pref_terms_of_service_title">Terms of Service</string>
    <string name="logout">Logout</string>
    <string name="switch_account">Switch account</string>
    <string name="action_navigate_setting_detail">Action navigate setting detail</string>
    <string name="defty">DEFTY</string>
    <string name="vip">VIP</string>
    <string name="play_banner_content">Play banner content</string>
    <string name="not_result">No results found.</string>
    <string name="filmDownload">Downloaded Movies</string>
    <string name="not_found_film_download">No movies have been downloaded.</string>
    <string name="delete_all_download">Delete all downloads</string>
    <string name="search_history">Search History</string>
    <string name="delete_history">Delete History</string>
    <string name="search_hot">Hot Searches</string>
    <string name="play_button">Play Button</string>
    <string name="more">View More</string>
    <string name="episodes">Episodes</string>
    <string name="for_you">For You</string>
    <string name="comments">Comments</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="trending">Trending</string>
    <string name="latest">Latest</string>
    <string name="post_a_comment">Post a Comment</string>
    <string name="send">Send</string>
    <string name="cover_image_download">Downloaded Movie Cover</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="play_movie">Play Movie</string>
    <string name="todo">TODO</string>
    <string name="coverImage">Movie Cover</string>
    <string name="watch_now">Watch Now</string>
    <string name="log_in_with_password">Log in with Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="movie_title">Movie Title</string>
    <string name="additional_info">Additional Info</string>
    <string name="limited">Limited</string>
    <string name="exclusive_for_new_users_nfirst_month_only_23_000">
        Exclusive for new users\nFirst month only 23,000₫
    </string>
    <string name="save">Save</string>
    <string name="personal_data">Personal Data</string>
    <string name="profile_image">Profile image</string>
    <string name="name_label">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_name">Enter name</string>
    <string name="view_more">Xem thêm</string>
    <string name="hide">Ẩn bớt</string>
</resources>